2001-05-03  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/*/xacc-hierarchical-report.sgml: remove file

	* doc/sgml/pt_PT/xacc-txf-categories.sgml: add missing </article>

	* doc/sgml/pt_PT/gnucash.sgml: add missing file

	* doc/sgml/es/xacc-txf-categories.sgml: add missing </article>

	* doc/sgml/es/gnucash.sgml: add missing file

	* doc/sgml/C/xacc-txf-categories.sgml: add missing </article>

	* src/engine/DateUtils.c: config.h goes first

	* make-gnucash-patch.in: fix bug

	* README.cvs: update info

2001-05-03  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/account-summary.scm: fix bug.

	* src/scm/html-document.scm: added handler for scatter plots.

	* src/scm/report/price-scatter.scm: Added file. This eventually
	should show prices over time. ATM it demonstrates scatter plots in
	a meaningless report.

	* src/scm/html-scatter.scm: Added file. Provides scatter plots for
	reports.

	* src/scm/options.scm (gnc:color->hex-string): added function.

2001-05-03  Robert Graham Merkel <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm: fix bug with secondary
	subheadings.

2001-05-03  Dave Peticolas  <dave@krondo.com>

	* many files: fix spelling errors

	* src/gnome/gnc-html-guppi.c: use unsigned int for color

2001-05-02  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: set the app's mdi mode from user prefs

	* README.cvs: add README about cvs write access

	* src/scm/report/net-barchart.scm: same as below

	* src/scm/report/category-barchart.scm: same as below

	* src/scm/report/average-balance.scm: same as below

	* src/scm/report/account-piecharts.scm: don't combine liabilities
	& equity together.

	* src/gnome/dialog-column-view.c: work on gui

	* src/gnome/dialog-utils.c (gnc_clist_columns_autosize): new func

2001-05-02  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm: Fix bug with subheading
	display.

2001-05-01  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c: fix bugs
